# NeroMate---Chessbot

./: BUILD_SOLUTION.md  CMakeLists.txt  INTEGRATION_GUIDE.md  README.md  ai_bot_controller.cpp  ai_bot_controller.h  ai_integration_example.cpp  ai_test.cpp  ai_test.pro  chess_ai.cpp  chess_ai.h  simple_ai_bot.cpp  simple_ai_bot.h  test.txt  test_simple_ai.cpp
